--- a/training.html
+++ b/training.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>test</title>
-        <script src="lodash.js"></script>
+        <script src="underscore.js"></script>
         <script src="test.js"></script>
     </head>
     <body>
