--- a/training.html
+++ b/training.html
@@ -2,10 +2,17 @@
 <html>
     <head>
         <title>test</title>
-        <script src="underscore.js"></script>
-        <script src="test.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     </head>
     <body>
-        <p>?</p>
+        <div class="your-class">
+            <div><img src="./tree.png" alt="tree"></div>
+            <div><img src="./crocodile.png" alt="crocodile"></div>
+            <div><img src="./Warface_sample.jpg" alt="Warface_sample"></div>
+        </div>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+        <script src="test.js"></script>
     </body>
 </html>
